--- a/website/rukou/index.jade
+++ b/website/rukou/index.jade
@@ -3,7 +3,7 @@ html(lang="en-US")
 	head
 		meta(http-equiv='Content-Type', Content='text/html; charset=utf-8')
 		title @Rukou 入口
-		script(src='javascript/auto-refresh.js',type='text/javascript')
+		script(src='../global/javascript/auto-refresh.js',type='text/javascript')
 	body.base-bg.read-color(onload='onloadHandler();')
 		// 设计概述
 
