调整了文件组织结构并修改了少数细节

--- a/website/rukou/style/style.css
+++ b/website/rukou/style/style.css
@@ -47,7 +47,7 @@ a {
 
 @font-face {
 	font-family: fys;
-	src: url('font/fys.ttf');
+	src: url('../../global/font/fys.ttf');
 }
 body {
 	font-family: 'Georgia', fys;
