--- a/website/file-explorer/style/style.css
+++ b/website/file-explorer/style/style.css
@@ -1,10 +1,118 @@
+
 html, body {
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+html {
+	font-size: 400%;
 }
 
 body {
 	font-family: 'Microsoft Yahei';
-	font-size: 100%;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
+ol, ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.container {
+	width: 24rem;
+	position: relative;
+}
+
+.varea {
+	display: inline-block;
+	vertical-align: top;
+	width: 10rem;
+	line-height: 2em;
+	margin-bottom: 3rem;
+}
+
+.varea.column-1 {
+	margin-left: 1rem;
+}
+
+.varea.column-2 {
+	margin-left: 2rem;
+}
+
+.seperator {
+	position: absolute;
+	left: 12rem;
+	width: 1px;
+	height: 100%;
+	background-color: black;
+}
+
+ol > li {
+	overflow: auto;
+}
+
+
+ol > li > a {
+	display: block;
+	padding: 0 .25em;
+}
+
+ol > li {
+	border-top: solid 1px black;
+	margin-top: -1px;
+	cursor: pointer;
+	/*
+	-webkit-tap-highlight-color: rgba(255,255,255,0);
+	-ms-touch-action: none;
+	*/
+}
+
+li:last-child {
+	border-bottom: solid 1px black;
+}
+
+li.subtitle {
+	background-color: black;
+	color: white;
+	text-align: center;
+}
+
+.class-title {
+	font-size: 2em;
+	line-height: 2em;
+	margin: 0;
+}
+
+ol.parent-dir-list > li {
+	background-color: #eee;
+	color: black;
+	font-weight: bold;
+}
+
+ol.parent-dir-list > li:last-child {
+	background-color: rgb(0, 110, 153);
+	color: white;
+}
+
+/*
+ol.parent-dir-list > li:active {
+	background-color: #eee;
+	color: rgb(0, 110, 153);
+}
+
+ol.sub-dir-list > li:active {
+	background-color: #eee;
+	color: rgb(0, 110, 153);
+}
+*/
+
+.current {
+	
+}
