--- a/website/file-explorer/style/style.css
+++ b/website/file-explorer/style/style.css
@@ -6,10 +6,6 @@ html, body {
 	height: 100%;
 }
 
-html {
-	font-size: 400%;
-}
-
 body {
 	font-family: 'Microsoft Yahei';
 }
@@ -23,6 +19,49 @@ ol, ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+}
+
+html {
+	font-size: 200%;
+}
+
+.container {
+	width: 100%;
+	min-height: 100%;
+	position: relative;
+}
+
+.varea {
+	display: inline-block;
+	vertical-align: top;
+	line-height: 2em;
+}
+
+.varea {
+	width: 45%;
+	margin-bottom: 3rem;
+}
+
+.varea.column-1 {
+	margin-left: 3%;
+}
+
+.varea.column-2 {
+	margin-left: 4%;
+}
+
+.seperator {
+	position: absolute;
+	left: 50%;
+	width: 0;
+	height: 100%;
+	border-left: solid 1px black;
+}
+
+/*
+
+html {
+	font-size: 400%;
 }
 
 .container {
@@ -53,6 +92,8 @@ ol, ul {
 	height: 100%;
 	background-color: black;
 }
+
+*/
 
 ol > li {
 	overflow: auto;
