--- a/website/file-explorer/style/header-style.css
+++ b/website/file-explorer/style/header-style.css
@@ -1,21 +1,27 @@
 .header {
 	color: white;
-	height: 4rem;
 	background-color: black;
-	line-height: 4rem;
-	padding-left: 3%;
+	/*padding-left: 3%;*/
 	position: relative;
+	text-align: center;
 }
 
-.header.expanded {
-	height: 50%;
+.header-content {
+	height: 0;
+	overflow: hidden;
+}
+
+.header-content.expanded {
+	height: 10rem;
+}
+
+.header-content .padding-container {
+	padding: 1rem 0;
 }
 
 .header .header-switch-button {
 	display: block;
 	text-align: center;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	line-height: 4rem;
+	font-size: 2rem;
 }
